--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
@@ -4,34 +4,15 @@ La función de la capa de red es simple, es la encargada de transportar paquetes
 2. **Enrutamiento (routing)**: La capa de red tiene que determinar la ruta o camino que deben seguir los distintos paquetes a medida que fluyen desde emisor al receptor. Los algoritmos que calculan estas rutas se conocen como ***algoritmos de enrutamiento***.
 
 Todo router tiene una tabla de reenvío. Un router reenvía un paquete examinando el valor de un campo de la cabecera del paquete entrante y utilizando después ese valor para indexarlo dentro de la tabla de reenvío del router. El resultado de la tabla de reenvío indica a cuál de las interfaces del enlace de salida del router será reenviado el paquete. En ocasiones se emplea el término de ***conmutador de paquetes*** para referirnos a un dispositivo de conmutación de paquetes general que transfiere un paquete desde la interfaz del enlace de entrada a la interfaz del enlace de salida, de acuerdo con el valor almacenado en un campo de la cabecera del paquete, aunque algunos conmutadores basan su decisión de acurdo al campo de la cabecera de la capa de enlace, mientras que otros lo basan en el campo de la cabecera de la capa de red.
-
->[!example] Conmutación de Paquetes y Conmutación de Circuitos
->Al momento de realizar el intercambio de paquetes entre dos equipos se pueden emplear dos métodos de comunicación diferentes:
->- **Conmutación de Circuitos**: Este método implica establecer un camino físico dedicado entre el origen y el destino antes de que la comunicación comience. La conmutación de circuitos garantiza una cantidad constante de ancho de banda y generalmente proporciona una baja variabilidad en el retardo de los paquetes, garantizando el orden en el que se envían los paquetes, lo que es ideal para servicios como llamadas de voz o transmisión de video.
->- **Conmutación de Paquetes**: En este método, los datos se dividen en paquetes pequeños, que se envían a través de la red de manera independiente. Cada paquete puede tomar rutas diferentes para llegar al destino, donde finalmente son reensamblados en el orden correcto, esto permite enviar paquetes de múltiples comunicaciones a través del mismos enlaces de red.
-
-El **modelo de servicio de red** define las características del transporte punto a punto de los paquetes entre los sistemas terminales emisor y receptor. La capa de red de Internet proporciona un único servicio conocido como ***servicio de mejor esfuerzo*** en la cual la temporización relativa entre paquetes no está garantizada, tampoco está garantizado que los paquetes se reciban en el orden que fueron emitidos y tampoco garantiza la entrega de los paquetes al destino.
+Por otro lado, el **modelo de servicio de red** define las características del transporte punto a punto de los paquetes entre los sistemas terminales emisor y receptor. La capa de red de Internet proporciona un único servicio conocido como ***servicio de mejor esfuerzo*** en la cual la temporización relativa entre paquetes no está garantizada, tampoco está garantizado que los paquetes se reciban en el orden que fueron emitidos y tampoco garantiza la entrega de los paquetes al destino.
 Al igual que la capa de transporte, la capa de red en los sistemas de conmutación de paquetes proporciona dos tipos de servicios de conexión, un servicio sin conexión y otro con conexión. Las redes de computadoras que sólo proporcionan un servicio de conexión en la capa de red se conocen como ***redes de circuitos virtuales***. Mientras que las redes que sólo proporcionan un servicio sin conexión en la capa de red se denominan ***redes de datagramas***.
 
-## Redes de Circuitos Virtuales
+## Redes de Area Extensa
 
-Un circuito virtual esta compuesto por:
+Al momento de realizar el intercambio de información entre dos equipos, se pueden emplear dos métodos de comunicación diferentes:
 
-1. Una ruta entre los hosts de origen y de destino.
-2. Una serie de números de circuito virtual, un número para cada enlace a lo largo de la ruta.
-3. Una serie de entradas en la tabla de reenvío de cada router a lo largo de la ruta.
-
-Un paquete que pertenece a un circuito virtual transportará un número de circuito virtual en su cabecera. Dado que un circuito virtual puede tener un número diferente en cada enlace, cada router interviniente tiene que sustituir el número de circuito virtual de cada paquete que lo atraviesa por un nuevo. Este nuevo número se obtiene de la tabla de reenvío.
-En una red de circuitos virtuales, los routers de la red tienen que mantener información de estado de la conexión para las conexiones activas. Específicamente, cada vez que se establece una conexión nueva en un router, tiene que añadirse una nueva entrada de conexión a la tabla de reenvío del router; y cada vez que una conexión se libera, la entrada debe borrarse de la tabla.
-Cuando se establece la conexión entre dos máquinas a través de un circuito virtual, la capa de red especifica la dirección de receptor, luego se configura el circuito virtual y se establece por que enlaces y routers pasará el mensaje, además puede que durante esta configuración la red reserve recursos a lo largo de toda la ruta, dado que todos los paquetes siguen el mismo camino dentro de la red, se garantiza que llegarán al destino en el mismo orden en que se enviaron, lo que es especialmente importante para aplicaciones sensibles al orden, como la transmisión de voz o video. Una vez se establece la configuración comienza el envío de paquetes.
-Los mensajes que los sistemas terminales envían a la red para iniciar o terminar un circuito virtual y los mensajes pasados entre los routers para configurar este mismo se conocen como ***mensajes de señalización*** y los protocolos empleados para intercambiar estos mensajes a menudo se denominan ***protocolos de señalización***.
-
-## Redes de Datagramas
-
-En una red de datagramas, cada vez que un sistema terminal desea enviar un paquete marca el paquete con la dirección del sistema terminal de destino y luego introduce el paquete en la red. Cuando un paquete se transmite desde un origen a un destino pasa a través de una serie de routers. Cada uno de estos routers utiliza la dirección de destino del paquete para reenviar dicho paquete, cuando un paquete llega a un router, éste utiliza la dirección de destino del paquete para buscar la interfaz del enlace de salida apropiado en la
-tabla de reenvío. Después, el router reenvía intencionadamente el paquete a esa interfaz del
-enlace de salida.
-En las red de datagramas las tablas de reenvío son modificadas por los algoritmos de enrutamiento, que normalmente actualizan una tabla de reenvío en intervalos aproximados de entre uno y cinco minutos, al contrario que en los circuitos virtuales donde las tablas se actualizaban cada vez que se configura una conexión a través de ese router.
+- **Conmutación de Circuitos**: Este método implica establecer un camino físico dedicado entre el origen y el destino antes de que la comunicación comience. La conmutación de circuitos garantiza una cantidad constante de ancho de banda y generalmente proporciona una baja variabilidad en el retardo de los paquetes, garantizando el orden en el que se envían los paquetes, lo que es ideal para servicios como llamadas de voz o transmisión de video.
+- **Conmutación de Paquetes**: En este método, los datos se dividen en paquetes pequeños, que se envían a través de la red de manera independiente. Cada paquete puede tomar rutas diferentes para llegar al destino, donde finalmente son reensamblados en el orden correcto, esto permite enviar paquetes de múltiples comunicaciones a través del mismos enlaces de red.
 
 ### Funciones Principales en la Conmutación de Paquetes
 
@@ -47,6 +28,24 @@ En el ámbito de las redes de datos, el manejo eficiente del tráfico de informa
     - **Evitar que el paquete sea enviado por el nodo anterior:** Se puede notificar al nodo anterior para que reduzca la velocidad de envío de paquetes, ayudando así a regular el flujo de datos.
 
 Estas funciones son esenciales para garantizar un enrutamiento eficiente de los paquetes y para mantener un control adecuado del tráfico en la red de conmutación de paquetes, asegurando así un funcionamiento óptimo y confiable del sistema de comunicaciones.
+#### Redes de Circuitos Virtuales
+
+Un circuito virtual consta de los siguientes componentes:
+
+1. Una ruta entre los hosts de origen y de destino.
+2. Una serie de números de circuito virtual, un número para cada enlace a lo largo de la ruta.
+3. Una serie de entradas en la tabla de reenvío de cada router a lo largo de la ruta.
+
+Un paquete que pertenece a un circuito virtual transportará un número de circuito virtual en su cabecera. Dado que un circuito virtual puede tener un número diferente en cada enlace, cada router tiene que sustituir el número de circuito virtual de cada paquete que lo atraviesa por uno nuevo. Este nuevo número se obtiene de la tabla de reenvío.
+En una red de circuitos virtuales, los routers de la red tienen que mantener información de estado de la conexión para las conexiones activas. Específicamente, cada vez que se establece una conexión nueva en un router, tiene que añadirse una nueva entrada de conexión a la tabla de reenvío del router; y cada vez que una conexión se libera, la entrada debe borrarse de la tabla.
+Cuando se establece la conexión entre dos máquinas a través de un circuito virtual, la capa de red especifica la dirección de receptor, luego se configura el circuito virtual y se establece por que enlaces y routers pasará el mensaje, además puede que durante esta configuración la red reserve recursos a lo largo de toda la ruta. Dado que todos los paquetes siguen el mismo camino dentro de la red, se garantiza que llegarán al destino en el mismo orden en que se enviaron, lo que es especialmente importante para aplicaciones sensibles al orden, como la transmisión de voz o video. Una vez se establece la configuración comienza el envío de paquetes.
+Los mensajes que los sistemas terminales envían a la red para iniciar o terminar un circuito virtual y los mensajes pasados entre los routers para configurar este mismo se conocen como ***mensajes de señalización*** y los protocolos empleados para intercambiar estos mensajes a menudo se denominan ***protocolos de señalización***.
+#### Redes de Datagramas
+
+En una red de datagramas, cada vez que un sistema terminal desea enviar un paquete marca el paquete con la dirección del sistema terminal de destino y luego introduce el paquete en la red. Cuando un paquete se transmite desde un origen a un destino pasa a través de una serie de routers. Cada uno de estos routers utiliza la dirección de destino del paquete para reenviar dicho paquete, cuando un paquete llega a un router, éste utiliza la dirección de destino del paquete para buscar la interfaz del enlace de salida apropiado en la
+tabla de reenvío. Después, el router reenvía intencionadamente el paquete a esa interfaz del
+enlace de salida.
+En las red de datagramas las tablas de reenvío son modificadas por los algoritmos de enrutamiento, que normalmente actualizan una tabla de reenvío en intervalos aproximados de entre uno y cinco minutos, al contrario que en los circuitos virtuales donde las tablas se actualizaban cada vez que se configura una conexión a través de ese router.
 
 >[!note] Aclaración sobre las Redes de Circuitos Virtuales y de Datagramas
 >Tanto los circuitos virtuales como los sistemas de datagramas, son dos servicios que proporcionan las redes de conmutación de paquetes para enviar los diferentes paquetes IP a través de la red, es decir, son distintas maneras en la que la red puede enviar los mensajes a través de su infraestructura.
@@ -54,16 +53,14 @@ Estas funciones son esenciales para garantizar un enrutamiento eficiente de los 
 ## El Estándar X.25
 
 **X.25** es un estándar ITU-T para redes WAN de conmutación de paquetes. Este estándar establece mecanismos de direccionamiento entre usuarios, negociación de características de comunicación, técnicas de recuperación de errores y control de flujo, además de un servicio orientado a conexión, trabajando con circuitos virtuales conmutados y permanentes.
-El principal propósito de este protocolo era facilitar la interconexión de redes privadas que eran incompatibles entre sí, dicho estándar especifica una interfaz entre una estación de trabajo y una red de conmutación de paquetes. Dentro de las principales características ofrecidas por este protocolo se encuentran:
+El estándar aborda los tres primeros niveles del modelo OSI, que incluyen el nivel físico, el nivel de enlace de datos y el nivel de red. Proporciona protocolos y procedimientos para la transferencia de datos en estos niveles, lo que facilita la interoperabilidad entre diferentes sistemas y redes. El principal propósito de este protocolo era facilitar la interconexión de redes privadas que eran incompatibles entre sí. Dentro de las principales características ofrecidas por este protocolo se encuentran:
 
 - **Intercambio de información entre terminales y un nodo:** Define cómo se debe realizar el intercambio de información entre un Equipo Terminal de Datos (DTE) y un Equipo de Conexión de Datos (DCE) en una red de conmutación de paquetes.
-- **Servicio orientado a conexión:** Utiliza un servicio orientado a la conexión, como lo son los circuitos virtuales, lo que significa que establece una conexión virtual entre el emisor y el receptor antes de que comience la transmisión de datos. Este servicio garantiza el secuenciamiento de los paquetes, lo que asegura que lleguen al destino en el orden correcto.
+- **Servicio orientado a conexión:** Utiliza un servicio orientado a la conexión, como lo son los circuitos virtuales, lo que significa que establece una conexión lógica entre el emisor y el receptor antes de que comience la transmisión de datos. Este servicio garantiza el secuenciamiento de los paquetes, lo que asegura que lleguen al destino en el orden correcto.
 - **Multiplexación:** Uno de las funcionalidades más importantes que ofrece X.25 es la capacidad de establecer 4095 circuitos virtuales sobre una misma conexión física entre dos terminales, logrando una comunicación full-duplex entre ambos equipos, es decir, los paquetes asociados a los distintos circuitos pueden transmitirse en ambos sentidos. La manera en que logra esto es mediante la división de tiempos, donde cada canal tiene un periodo de tiempo fijo para acceder al medio físico y enviar paquetes.
 - **Control de flujo y de errores:** Este protocolo utiliza el mecanismo de ventanas deslizantes para realizar el control de flujo entre ambos extremos. Mientras que para el control de errores se utiliza la técnica de ***adelante-atrás-N***, de modo que si el nodo recibe un mensaje de que el paquete ha sido rechazado, enviará nuevamente ese paquete específico y todos los siguientes. Además de permitir el reinicio de un circuito virtual, poniendo todos los números de secuencia en 0 y reiniciando la conexión.
 
-El estándar aborda los tres primeros niveles del modelo OSI, que incluyen el nivel físico, el nivel de enlace de datos y el nivel de red. Proporciona protocolos y procedimientos para la transferencia de datos en estos niveles, lo que facilita la interoperabilidad entre diferentes sistemas y redes.
 A lo largo de los años, el estándar X.25 ha sido revisada varias veces para adaptarse a los avances tecnológicos y a las nuevas necesidades del mercado. Las revisiones se llevaron a cabo en 1977, 1980, 1984, 1988 y 1992, lo que permitió mantener su relevancia y eficacia en un entorno en constante cambio.
-
 ### Frame Relay
 
 Frame Relay, es un sucesor del protocolo X.25, y al igual que esta, es una tecnología de conmutación de paquete orientada a conexión diseñada para la transmisión eficiente de datos a través de redes WAN. Tanto el tamaño de los paquetes, como de las cabeceras son muy similares a X.25,  las principales características que distinguen a Frame Relay son las siguientes:
@@ -72,9 +69,8 @@ Frame Relay, es un sucesor del protocolo X.25, y al igual que esta, es una tecno
 - La multiplexación y conmutación de conexiones lógicas se hacen en el nivel 2, eliminándose así una capa completa de procesamiento obteniendo una mayor eficiencia.
 - No existe control de flujo ni de errores a nivel de enlaces individuales. Este control se realiza de extremo a extremo en las capas superiores.
 
-La ventaja de la técnica de retransmisión de tramas es la potencia del proceso de comunicaciones, reduciéndose la funcionalidad del protocolo necesaria en la interfaz *usuario-red* así como el procesamiento interno de red. En consecuencia, cabe esperar un menor retardo y un mayor rendimiento.
 Frame Relay emplea un mecanismo de regulación, conocido como ***Tasa de conexión contratada***, la cual es la velocidad en bits/seg. que la red compromete a cumplir en la transmisión de tramas para cada conexión específica. Cualquier trama transmitida por encima del limite especificado por la tasa es marcada por el nodo encendiendo el bit DE, lo que indica que esa trama es susceptible de ser rechazada en caso de congestión. Existe un caudal máximo por encima del cual la trama es siempre rechazada.
-
+La ventaja de la técnica de retransmisión de tramas es la potencia en el proceso de comunicaciones, ya que se reducen las funcionalidades del protocolo, aumentando así el procesamiento interno de la red. En consecuencia, cabe esperar un menor retardo y un mayor rendimiento.
 ### Asynchrounous Transfer Mode (ATM) 
 
 ATM es una tecnología de conmutación y multiplexación de alta eficiencia, diseñada para manejar datos en redes de banda ancha. Utiliza celdas de tamaño fijo de 53 bytes (48 bytes de datos y 5 bytes de encabezado), lo que facilita el procesamiento y la transmisión eficiente en la red. ATM tiene la capacidad para manejar diferentes tipos de tráfico como voz, video, imagenes y datos sobre la misma red. Cada celda lleva consigo un identificador de ruta llamado VPI (Virtual Path Identifier) que especifica el camino virtual que recorrerá la celda dentro de la red física y un VCI (Virtual Channel Identifier) el cual identifica de manera única el canal virtual perteneciente a un camino virtual específico. Un canal virtual representa una conexión individual entre dos puntos, por donde se transmiten los datos.
