--- a/4º Año/Comunicaciones y Redes/Unidad 4/2. Multiplexacion.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/2. Multiplexacion.md
@@ -1,4 +1,3 @@
-
 La multiplexación es una técnica que permite compartir un único canal de comunicación con múltiples señales simultáneas, como voz, datos, etc. Hay tres técnicas básicas de multiplexación que se utilizan comúnmente:
 
 - Multiplexación por división de frecuencia (FDM)
@@ -8,6 +7,7 @@ La multiplexación es una técnica que permite compartir un único canal de comu
 ### La Multiplexación por División de Frecuencia (FDM)
 
 Es una técnica que se basa en dividir el ancho de banda de un canal de comunicación en varias porciones, cada una dedicada a un subcanal específico que transporta una comunicación determinada.
+
 1. **División del Ancho de Banda:** El ancho de banda del canal se divide en múltiples subcanales, cada uno destinado a una comunicación particular. La suma de los anchos de banda de todos los subcanales no debe exceder el ancho de banda total del canal principal.
 2. **Separación de Portadoras:** Para que las señales puedan transmitirse simultáneamente sin interferencia, las portadoras de cada subcanal se separan en frecuencia, logrando que los anchos de banda de los subcanales no se solapen, garantizando la integridad de las señales transmitidas.
 ### Multiplexación por División de Longitud de Onda (WDM)
@@ -19,8 +19,8 @@ Es una técnica que asigna periódicamente y por un tiempo limitado todo el cana
 
 ### Multiplexación Estadística (STDM)
 
-Es una variante del multiplexación por división de tiempo (TDM) que se caracteriza por una asignación dinámica de los slots de tiempo en función del tráfico real de cada conexión.
-Caracteristicas:
+Es una variante del multiplexación por división de tiempo (TDM) que se caracteriza por una asignación dinámica de los slots de tiempo en función del tráfico real de cada conexión. Las principales características que lo diferencian son:
+
 - **Asignación Dinámica de Slots:** En STDM, los slots de tiempo se asignan dinámicamente en función de las conexiones que tienen tráfico para transmitir en un momento dado. Esto significa que no se asignan intervalos de tiempo fijos para cada conexión, sino que se asignan según la demanda.
 - **Inclusión de Información Adicional:** Cada slot de tiempo incluye información adicional, como la dirección de origen o destino, junto con los bits que se van a transmitir. Esta información es crucial para dirigir los datos correctamente a su destino final.
 - **Flexibilidad y Eficiencia:** La multiplexación estadística ofrece una mayor flexibilidad y eficiencia en la asignación de recursos de transmisión, ya que se adapta dinámicamente a las necesidades cambiantes de tráfico de los diferentes dispositivos conectados.
