--- a/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
@@ -17,11 +17,10 @@ Antes de comenzar a explicar las distintas características del protocolo IP, es
 ### Fragmentación de los Paquetes IP
 
 Algunos protocolos pueden transportar paquetes grandes, mientras que otros sólo transportan paquetes pequeños. Por ejemplo, las tramas Ethernet pueden transportar hasta 1500 bytes de datos, pera otros enlaces de área extensa no pueden transportar más de 576 bytes. La cantidad máxima de datos que una trama de la capa de enlace puede transportar se conoce como ***unidad máxima de transmisión*** (MTU). Puesto que cada paquete IP se encapsula dentro de una trama de la capa de enlace para ir de un router al siguiente, la MTU del protocolo de la capa de enlace impone un límite estricto a la longitud de un paquete.
-Un gran problema surge cuando cada uno de los enlaces existentes a lo largo de la ruta entre el emisor y el destino pueden utilizar diferentes protocolos de la capa de enlace y cada uno de estos protocolos puede utilizar una MTU diferente. La solución consiste en fragmentar los datos del paquete en dos o más paquetes más pequeños, encapsular cada de estos paquetes más pequeños en una trama de la capa de enlace distinta y enviar dichas tramas a través del enlace de salida. Cada uno de estos datagramas más pequeños se conocen como ***fragmentos***.
-Cuando un host de destino recibe una serie de paquetes procedentes del mismo origen, tiene que determinar cuales de ellos son fragmentos de un paquete más grande. Si algunos paquetes son fragmentos, tiene que determinar además cuándo ha recibido el último fragmento y cómo debe ensamblar los fragmentos que ha recibido para formar el paquete original. Cuando un router necesita fragmentar un paquete, cada paquete resultante se marca con la dirección de origen, la dirección de destino y el número de identificación del paquete original. Cuando el destino recibe una serie de paquetes procedentes del mismo host emisor, puede examinar los números de identificación para determinar cuáles de ellos son fragmentos de un mismo paquete más largo.
-Puesto que IP es un servicio no fiable, es posible que uno o más de los fragmentos nunca lleguen a su destino. Por esta razón, con el fin de que el host de destino esté absolutamente seguro de que ha recibido el último fragmento del paquete original, el último fragmento tiene un bit indicador puesto a 0, mientras que los demás fragmentos tienen el bit indicador puesto a 1. Además, para que el host de destino determine si falta un fragmento se utiliza el ***campo de desplazamiento*** del encabezado para especificar en qué posición dentro del paquete IP original encaja el fragmento.
+Un gran problema surge cuando cada uno de los enlaces existentes a lo largo de la ruta entre el emisor y el destino pueden utilizar diferentes protocolos de la capa de enlace y cada uno de estos protocolos puede utilizar una MTU diferente. La solución consiste en fragmentar los datos del paquete en dos o más paquetes más pequeños, encapsulando cada uno de estos paquetes más pequeños en una trama de la capa de enlace distinta y enviar dichas tramas a través del enlace de salida. Cada uno de estos datagramas más pequeños se conocen como ***fragmentos***.
+Cuando un host de destino recibe una serie de paquetes procedentes del mismo origen, tiene que determinar cuales de ellos son fragmentos de un paquete más grande. Si algunos paquetes son fragmentos, tiene que determinar además cuándo ha recibido el último fragmento y cómo debe ensamblar los fragmentos que ha recibido. Cuando un router necesita fragmentar un paquete, cada paquete resultante se marca con la dirección de origen, la dirección de destino y el número de identificación del paquete original. Cuando el destino recibe una serie de paquetes procedentes del mismo host emisor, puede examinar los números de identificación para determinar cuáles de ellos son fragmentos de un mismo paquete más largo.
+Puesto que IP es un servicio no fiable, es posible que uno o más de los fragmentos nunca lleguen a su destino. Por esta razón, con el fin de que el host de destino esté absolutamente seguro de que ha recibido el último fragmento del paquete original, el último fragmento tiene un bit indicador puesto a 0, mientras que los demás fragmentos tienen el bit indicador puesto a 1. Además, para que el host de destino determine donde colocar dicho fragmento se utiliza el ***campo de desplazamiento*** del encabezado para especificar en qué posición dentro del paquete IP original encaja el fragmento.
 Debido a que este mecanismo puede ser utilizado para realizar ataques como DoS o denegaciones de servicio, la versión mas reciente del protocolo IPv6 no admite la fragmentación, sino que  crea paquetes más pequeños compatibles con todos lo tipos de redes.
-
 ### Direccionamiento IP
 
 Las direcciones IP tienen una longitud de 32 bits, dándonos una cantidad de $2^{32}$ direcciones IP direccionables. Estas direcciones normalmente se expresan utilizando la notación decimal con punto, en la que cada byte de la dirección se escribe en formato decimal y separada mediante un punto del resto de los bytes de la dirección. Todas las direcciones IP están compuestas por dos partes, la parte de red y la parte de los host, normalmente se suele indicar con una barra la cantidad de bits pertenecientes a la subred en cuestión, por ejemplo la IP 192.168.24.1/24 quiere decir que los primeros 24 bits de la dirección IP corresponden a la subred o también llamada ***prefijo de red***, mientra que los demás bits están disponibles para hacer referencias a los distintos host dentro de esa subred. Comunmente estos últimos bits de menor peso son los que se utilizan para realizar el direccionamiento al host destino. Este método de enrutamiento posee el nombre de ***Enrutamiento entre dominios sin clases*** (CIDR),  el cual permite definir una dirección CIDR más pequeño como por ejemplo de 21 bits para el prefijo de la red y los 11 restantes para identificar a los host de la red, lo que permitía a su vez crear distintas subredes dentro de esa misma red.
@@ -44,19 +43,17 @@ Normalmente cuando se obtenía el bloque de direcciones del proveedor de servici
 Además de esta función el DHCP permite que los host accedan a información adicional, como la máscara de la subred, la dirección IP del router en el que se hace el primer salto e incluso la dirección IP del servidor DNS local.
 DHCP es un protocolo cliente-servidor. Normalmente, un cliente es un host recién llegado que desea obtener información de configuración de la red, incluyendo una dirección IP para sí mismo. En el caso más simple, cada subred tendrá un servidor DHCP. Si en la subred no hay ningún servidor, es necesario un agente de retransmisión DHCP que conozca la dirección de un servidor DHCP para dicha red. Para un host recién llegado a una red, el protocolo DHCP es un proceso de cuatro pasos:
 
-1. **Descubrimiento del servidor DHCP**. La primera tarea de un host recién llegado es encontrar un servidor DHCP con el que interactuar. Esto se hace mediante un mensaje de descubrimiento DHCP, que envía un cliente dentro de un paquete UDP al puerto 67. Para encontrar el servidor el cliente DHCP envia el paquete utilizando la dirección de difusión o broadcast (255.255.255.255) para que el paquete se envíe a toda la red y solo el servidor responda al destinatario.
-2. **Oferta del servidor DHCP**. Un servidor DHCP que recibe un mensaje de descubrimiento DHCP responde al cliente con un mensaje de oferta DHCP dentro de otro paquete UDP pero esta vez al puerto 68, este mensaje difunde a todos los nodos de la subred utilizando nuevamente un mensaje difusión. Puesto que en la subred pueden existir varios servidores DHCP, el cliente puede encontrarse en la situación de poder elegir entre varias ofertas. Cada mensaje de oferta de servidor contiene el ID de transacción del mensaje de descubrimiento recibido, la dirección IP propuesta para el cliente, la máscara de red y el tiempo de arrendamiento de la dirección IP, generalmente se define durante horas o incluso días.
+1. **Descubrimiento del servidor DHCP**. La primera tarea de un host recién llegado es encontrar un servidor DHCP con el que interactuar. Esto se hace mediante un mensaje de descubrimiento DHCP, que envía un cliente dentro de un paquete UDP al puerto 67. Para encontrar el servidor el cliente DHCP envia el paquete utilizando la dirección de difusión o broadcast, para que el paquete se envíe a toda la red y solo el servidor responda al destinatario.
+2. **Oferta del servidor DHCP**. Un servidor DHCP que recibe un mensaje de descubrimiento DHCP responde al cliente con un mensaje de oferta DHCP dentro de otro paquete UDP pero esta vez al puerto 68, este mensaje se envía a todos los nodos de la subred utilizando nuevamente la dirección de difusión. Puesto que en la subred pueden existir varios servidores DHCP, el cliente puede encontrarse en la situación de poder elegir entre varias ofertas. Cada mensaje de oferta del servidor contiene el ID de transacción del mensaje de descubrimiento recibido, la dirección IP propuesta para el cliente, la máscara de red y el tiempo de arrendamiento de la dirección IP, generalmente se define durante horas o incluso días.
 3. **Solicitud DHCP**. El cliente recién llegado seleccionará de entre las ofertas del servidor y responderá a la oferta seleccionada con un mensaje de solicitud DHCP, devolviendo los parámetros de configuración.
 4. **ACK DHCP**. El servidor contesta al mensaje de solicitud DHCP con un mensaje ACK DHCP, que confirma los parámetros solicitados.
 
 Una vez que el cliente recibe el mensaje de reconocimiento DHCP, la interacción se completa y el cliente puede utilizar la dirección IP asignada por DHCP durante el tiempo de arrendamiento. Dado que un cliente puede desear utilizar su dirección durante más tiempo del arrendado, DHCP también proporciona un mecanismo que permite a un cliente renovar su tiempo de arrendamiento de una dirección IP.
-
 #### Traducción de Direcciones de Red
 
 Supongamos que una empresa cuenta con un determinado número de equipos a la hora de iniciar la actividad, en ese caso se contrata un servicio de Internet y se le asigna a cada equipo una dirección IP mediante DHCP o manualmente, en caso de que la empresa comience a crecer y comience a adquirir cada vez más equipos va a llegar un momento en que el bloque de direcciones asignado por el proveedor de Internet será insuficiente. Afortunadamente, existe una forma más simple de asignar direcciones que ha encontrado un uso cada vez más amplio en escenarios de este tipo, la ***traducción de direcciones de red*** (NAT). Los routers NAT son dispositivos que se encargan de ocultar los detalles de las redes domésticas o locales del resto de la red.
 Si todos los paquetes que llegan al router NAT procedentes de la WAN tienen la misma dirección IP de destino, específicamente, la de la interfaz WAN del router NAT, la manera en la que este tipo de routers pueden direccionar los paquetes a los hosts correspondientes es a través de una **tabla de traducciones NAT** almacenada en el router NAT, e incluir los números de puerto, así como las direcciones IP en las entradas de la tabla.
 Cuando un dispositivo realiza una petición a un servidor externo, el equipo envía un paquete que contiene tanto su dirección IP interna y el puerto del proceso correspondiente, cuando este paquete llega al router NAT, este cambia la dirección IP interna de ese equipo por la dirección IP pública de la red WAN, además mapea el puerto de ese paquete a uno que utiliza el NAT internamente, luego agrega tanto la IP interna como su puerto correspondiente a la tabla de traducciones NAT. Cuando el servidor envía su respuesta, la misma es recibida por el router y realiza un remapeado de la dirección IP del destinatario y su puerto correspondiente, de esta forma ese paquete se enviará al host correspondiente.
-
 ### Internet Protocol Version 6
 
 A principios de la década de 1990, el Internet Engineering Task Force comenzó a desarrollar un sucesor para el protocolo IPv4, ya que el número de nuevos  nodos que se iban sumando a la red era cada vez mayor llegando al punto que comenzaban a terminarse las direcciones IP asignable. Además se aprovecho esto para realizar mejoras a dicho protocolo.
@@ -67,19 +64,17 @@ A diferencia de su versión anterior, los paquetes del protocolo IPv6 eliminaron
 Entre las principales características de esta nueva versión del protocolo son las siguientes:
 
 - El tamaño de las direcciones IP se amplia a 128 bits. Agregando un nuevo tipo de dirección denominada ***dirección anycast***, que permite entregar un paquete a una máquina cualquiera dentro de un grupo de hosts.
-- Las cabeceras de los paquetes fueron simplificadas eliminando algunos campos y otros haciendolos opcionales, haciendo que las cabeceras posean un tamaño fijo de 40 bytes haciendo que el procesamiento de los paquetes sea más rápido.
+- Las cabeceras de los paquetes fueron simplificadas eliminando algunos campos y otros haciendolos opcionales, haciendo que las cabeceras posean un tamaño fijo de 40 bytes logrando que el procesamiento de los paquetes sea más rápido.
 - IPv6 establece la definición de flujos que permite etiquetar paquetes que pertenezcan a determinados flujos de datos, los cuales ayudan a asignar un tratamiento especial a estos mismos, como por ejemplo los paquetes pertenecientes a la transmisión de audio y  vídeo en tiempo real pueden estar asignados a un flujo. Además de estos flujos esta versión del protocolo también posee un campo de 8 bits para definir que tipo de tráfico es ese paquete.
 - No se permite ni la fragmentación ni el reensamblado de paquetes en los routers intermedios, en caso de que un router tenga que enviar un paquete por una red que acepta tramas más pequeñas, el router descartará el paquete y enviará un mensaje el emisor mediante un código ICMP, de esta forma el emisor puede disminuir el tamaño de los paquetes. Los paquetes se fragmentan y se reconstruyen solo en los sistemas terminales.
-- Se elimina la suma do comprobación de las cabeceras, ya que tanto la capa de transporte como de enlace realizan sus respectivas sumas de comprobación, por lo que los diseñadores vieron redundante que la capa de red realice la misma operación otra vez.
+- Se elimina la suma de comprobación de las cabeceras, ya que tanto la capa de transporte como de enlace realizan sus respectivas sumas de comprobación, por lo que los diseñadores vieron redundante que la capa de red realice la misma operación otra vez.
 - El campo de las ***opciones*** ya no se incluye en los encabezados, sin embargo las opciones no han desaparecido, siguen estando pero como una de las posibles siguientes cabeceras dentro de la cabecera IPv6, al igual que las cabeceras UDP o TCP pueden ser las siguientes cabeceras dentro del encabezado IP.
 
 En el documento RFC 4443 se ha definido una nueva versión de ICMP para IPv6. Además de reorganizar las definiciones de tipos y códigos ICMP existentes, ICMPv6 también añadió nuevos tipos y códigos requeridos por la nueva funcionalidad de IPv6, entre los que se incluyen el tipo “*Paquete demasiado grande*” y el código de error “*Opciones IPv6 no reconocidas*”. Además, ICMPv6 incluye la funcionalidad del ***Protocolo de gestión de grupos de Internet*** (IGMP).
-
 #### Traducción de IPv4 a IPv6
 
-Al momento de enviar paquetes a través de la red surge el problema de como traducir los paquetes de IPv6 a IPv4, ya que si bien IPv6 es compatible con sus versiones anteriores, IPv4 no es capas de transportar paquetes de IPv6. La forma más fácil y práctica para resolver este problema fue implementando un método de de ***pila dual***, en el cual los nodos IPv6 también disponen de una implementación de IPv4 completa. Estos nodos tienen la capacidad de enviar y recibir paquetes en ambas versiones de protocolo. Los nodos que emplean este método deben contar con los dos tipos de direcciones y ser capas de de determinar en que versión están operando los demás nodos, esto puede lograrse a través de solicitudes de DNS. Debido a que este método obliga a realizar conversiones de IPv6 a IPv4 perdiendo información de los encabezados, se utiliza otro método llamado tunelización.
-La ***tunelización*** puede resolver el problema anteriormente mencionado, la idea básica en la que descansa el método de tunelización es la siguiente; suponga que dos nodos IPv6 desean comunicarse utilizando paquetes IPv6 pero están conectados entre sí a través de routers IPv4. Este conjunto de routers que conectan ambos nodos de IPv6 reciben el nombre de túnel. Mediante la tunelización, el nodo IPv6 del lado emisor del túnel toma el paquete IPv6 completo y lo incluye en el campo de datos del paquete IPv4, de esta forma los distintos nodos IPv4 que conectan a los dos nodos IPv6 pueden realizar el direccionamiento hacia el destino sin perder información. Finalmente el nodo IPv6 del lado receptor del túnel recibe el paquete IPv4, determina que ese paquete contiene un paquete IPv6 en su carga útil, extrae el paquete y procede a encaminarlo utilizando IPv6.
-
+Al momento de enviar paquetes a través de la red surge el problema de como traducir los paquetes de IPv6 a IPv4, ya que si bien IPv6 es compatible con sus versiones anteriores, IPv4 no es capas de transportar paquetes de IPv6. La forma más fácil y práctica para resolver este problema fue implementando un método de de ***pila dual***, en el cual los nodos IPv6 también disponen de una implementación de IPv4 completa. Estos nodos tienen la capacidad de enviar y recibir paquetes en ambas versiones de protocolo. Los nodos que emplean este método deben contar con los dos tipos de direcciones y ser capas de de determinar en que versión están operando los demás nodos. Debido a que este método obliga a realizar conversiones de IPv6 a IPv4 perdiendo información de los encabezados, se utiliza otro método llamado tunelización.
+La ***tunelización*** resuelve el problema anteriormente mencionado, la idea básica en la que descansa el método de tunelización es la siguiente; suponga que dos nodos IPv6 desean comunicarse utilizando paquetes IPv6 pero están conectados entre sí a través de routers IPv4. Este conjunto de routers que conectan ambos nodos de IPv6 reciben el nombre de túnel. Mediante la tunelización, el nodo IPv6 del lado emisor del túnel toma el paquete IPv6 completo y lo incluye en el campo de datos del paquete IPv4, de esta forma los distintos nodos IPv4 que conectan a los dos nodos IPv6 pueden realizar el direccionamiento hacia el destino sin perder información. Finalmente el nodo IPv6 del lado receptor del túnel recibe el paquete IPv4, determina que ese paquete contiene un paquete IPv6 en su carga útil, extrae el paquete y procede a encaminarlo utilizando IPv6.
 ## Internet Control Message Protocol (ICMP)
 
 Los hosts y los routers utilizan ICMP, para intercambiarse información acerca de la capa de red. El uso más típico de ICMP es la generación de informes de error. ICMP a menudo se considera parte de IP pero, en sentido arquitectónico, se encuentra justo encima de IP, ya que los mensajes ICMP son transportados dentro de los paquetes IP.
