--- a/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
@@ -22,8 +22,8 @@ El sistema de transmisión que comunica el origen y el destino, puede ser:
 
 Además, las redes pueden ser conectadas entre ellas a través de distintos modelos de redes, principalmente dos:
 
-- **PAN** (Metropolitan Area Network = Red de Área Metropolitana): interconectan varias redes LAN en una zona geográficamente cercana, un ejemplo de esto puede ser WiMax, MetroEthernet.
-- **MAN** (Personal Area Network = Red de Área Personal): interconecta dispositivos dentro del área más cercana de un usuario, como por ejemplo el Bluetooth.
+- **MAN** (Metropolitan Area Network = Red de Área Metropolitana): interconectan varias redes LAN en una zona geográficamente cercana, un ejemplo de esto puede ser WiMax, MetroEthernet.
+- **PAN** (Personal Area Network = Red de Área Personal): interconecta dispositivos dentro del área más cercana de un usuario, como por ejemplo el Bluetooth.
 
 >[!tldr] Nodos Adyacentes y Nodos Cercanos
 >- **Nodos Adyacentes**: Los nodos adyacentes se refieren a aquellos nodos en una red que están directamente conectados entre sí por un enlace. En otras palabras, hay una conexión física directa entre estos nodos.
