--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Capa de Aplicacion.md
@@ -75,7 +75,7 @@ HTTP implementa servidores sin estado, esto significa que no se guarda informaci
 >2. Páginas de acceso frecuente almacenadas en diferentes servidores distribuidos geográficamente.
 >3. Componentes de contenido gráfico, archivos multimedia, etc., almacenados en servidores de alta performance.
 >
->Estos cachés comúnmente son conocidos como ***proxys***, estos son entidades de red que se encargan de satisfacer solicitudes HTTP para un dominio web de origen, es decir, su servidor autoritativo. Estas cachés almacenan en su disco copias de objetos solicitados recientemente por los distintos usuarios de una red. Este proxy actúa como servidor y cliente al mismo tiempo, ya que responde peticiones HTTP en caso de contar con el recurso, en caso de no tenerlo en su almacenamiento realiza una petición de este recurso al servidor principal. Estos cachés se implementan principalmente para aumentar el tiempo de respuesta de las peticiones y para reducir la congestión de una red.
+>Estos cachés comúnmente son conocidos como ***proxys***, estos son entidades de red que se encargan de satisfacer solicitudes HTTP para un dominio web de origen. Estas cachés almacenan en su disco copias de objetos solicitados recientemente por los distintos usuarios de una red. Este proxy actúa como servidor y cliente al mismo tiempo, ya que responde peticiones HTTP en caso de contar con el recurso, en caso de no tenerlo en su almacenamiento realiza una petición de este recurso al servidor principal. Estos cachés se implementan principalmente para aumentar el tiempo de respuesta de las peticiones y para reducir la congestión de una red.
 >Aunque la caché resulta muy útil, esto conlleva un problema, el objeto que está almacenado en la caché puede no estar actualizada, por suerte HTTP proporciona un mecanismo que te permite verificar si un objeto ha sido actualizado o no, esto se logra agregando una línea al encabezado de la petición
 
 ### Simple Mail Transfer Protocol (SMTP)
