--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -7,7 +7,7 @@ Entre los distintos servicios que nos brindan los protocolos de transporte se en
 
 1. Convertir el servicio de entrega de IP entre dos hosts, a un servicio de entrega entre procesos. Es decir, multiplexar y desmultiplexar los datos.
 2. Comprobación de la integridad de los paquetes (cheksum en headers).
-3. Realizar un direccionamiento usando ***sockets***, las cuales son la unión de la dirección IP más el número de puerto.
+3. Realizar un direccionamiento usando ***sockets***.
 
 >[!tldr] Los Sockets
 > Los ***sockets*** son una interfaz o punto de acceso entre el proceso que contiene la aplicación de usuario y el protocolo de la capa de transporte, que le permite a las diferentes aplicaciones realizar peticiones y recibir mensajes. En la práctica, los sockets son la unión de la dirección IP del destinatario + el puerto donde está escuchando la aplicación. La conexión entre aplicaciones a nivel lógico es a través de los puertos, ya que son los procesos de usuario los que reciben información por los puertos asignados como tal, estos puertos deben ser exclusivos para cada aplicación.
@@ -25,7 +25,7 @@ Cada uno de los sockets debe tener un identificador único, además, cada segmen
 ![[redes-segmento.png]]
 
 >[!note] Los Puertos
->Un puerto es un número de identificación que se utiliza para dirigir el tráfico de datos a una aplicación o proceso en específico o a un servicio en un dispositivo de red. Todos los puertos están asociados a una direcciones IP en el modelo de comunicación TCP/IP. Cada puerto tiene un número de 16 bits que va de 0 a 65.535. De los cuales los puertos del 0 al 1023 son los llamados “***well-know***” y están reservados para ser usados por protocolos de aplicación, los demás son puertos “***efímeros***” que pueden ser usados por procesos que quieren direccionar peticiones a esos protocolos de aplicación.
+>Un puerto es un número de identificación que se utiliza para dirigir el tráfico de datos a una aplicación o proceso en específico a un servicio en un dispositivo de red. Todos los puertos están asociados a una direcciones IP en el modelo de comunicación TCP/IP. Cada puerto tiene un número de 16 bits que va de 0 a 65.535. De los cuales los puertos del 0 al 1023 son los llamados “***well-know***” y están reservados para ser usados por protocolos de aplicación, los demás son puertos “***efímeros***” que pueden ser usados por procesos que quieren direccionar peticiones a esos protocolos de aplicación.
 
 ## Transmission Control Protocol (TCP)
 
