--- a/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
@@ -1,6 +1,6 @@
 ## Internet Protocol (IP)
 
-Antes de comenzar a explicar las distintas características del protocolo IP, es conveniente saber tanto su sintaxis como su semántica, los paquetres IP poseen los siguientes elementos:
+Antes de comenzar a explicar las distintas características del protocolo IP, es conveniente saber tanto su sintaxis como su semántica, los paquetes IP poseen los siguientes elementos:
 
 1. **Número de versión (4 bits)**: Identifica la versión del protocolo IP usado, permitiendo al router saber cómo procesar el paquete, ya que diferentes versiones de IP usan diferentes formatos de paquetes.
 2. **Longitud de cabecera (4 bits)**: Indica el tamaño de la cabecera del paquete IP, que puede variar si se incluye opciones adicionales. La cabecera estándar sin opciones mide 20 bytes.
